完善用户留存数据统计

--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "@antv/data-set": "^0.8.6",
     "@antv/g2": "^3.0.5-beta.6",
     "axios": "0.17.1",
+    "echarts": "^4.0.4",
     "element-ui": "2.0.8",
     "js-cookie": "2.2.0",
     "less": "^3.0.1",
     "less-loader": "^4.1.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "v-charts": "^1.16.8",
     "viser-vue": "^2.2.2",
     "vue": "2.5.10",
     "vue-router": "3.0.1",
